Add chanel description to location and rotation notification.

--- a/parkinsonlibrary/src/main/res/values-ru/strings.xml
+++ b/parkinsonlibrary/src/main/res/values-ru/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <resources>
         <string name="no_sensor_detected_for_rotation_detection">Нет сенсоров для отслеживания вращения</string>
         <string name="rotation_detector_sensor_notification_title">Мониторинг</string>
-        <string name="rotation_detector_sensor_notification_text">Активен мониторинг местопололжения и вращения</string>
-    </resources>
+        <string name="rotation_detector_sensor_notification_text">Активен мониторинг перемещения и вращения</string>
 
+    <string name="channel_description">Мониторинг перемещения и вращения</string>
 </resources>
