--- a/parkinsonlibrary/src/main/res/values/strings.xml
+++ b/parkinsonlibrary/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">ParkinsonLibrary</string>
     <string name="no_sensor_detected_for_rotation_detection">Cannot find rotation sensors</string>
     <string name="rotation_detector_sensor_notification_title">Monitoring</string>
     <string name="rotation_detector_sensor_notification_text">Location and rotation motoring</string>
     <string name="channel_description">Chanel for rotation and location service</string>
+    <string name="disable_monitoring_action">Disable</string>
 </resources>
